Bug 1149954 - Only Skia canvases need be considered for acceleration. Carry r=jmuizelaar from bug 1124249